src/styles/input-groups.less
@import (reference) "./variables";
@import (reference) "./mixins";


// Text input groups
// -------------------------
.input-group-addon {
  color: @gray;
  background-color: @input-bg;
}


// Query Input (i.e. search forms)
// -------------------------
.query-input {
  position: relative; // For loader
  
  .form-group {
    .fycon-search;
    margin-bottom: 0;

    &:before {
      .fycons-styles-base;
      position: absolute;
      z-index: 10; // Must be higher than 2 (z-index of input field that follows)
      top: 8px;
      left: 12px;
      color: @input-color-placeholder;
    }
    
    .input-group {
      display: block; // Override TwBootstrap style (display: table)
    }
  
    input[type="text"] {
      .placeholder(@input-color-placeholder); // Without this, IE10-11 lets the input field's color override the placeholder color.
      display: block; // Make field full width in IE9
      padding-left: 34px;
      font-family: @font-family-sans-serif;
      font-size: @font-size-small;
      color: @gray-darkest;
      border-radius: @input-border-radius;
    }
  }
  
  .input-group-addon { // Loader wrapper
    position: absolute;
    top: 6px;
    right: 12px;
    z-index: 2;
    width: 24px; // 24px = width of .loader-mini
    padding: 1px 0; // Leave room to expose text field's border
    border: 0;
    background-color: transparent;
  }
  
  .loader {
    background-color: #fff;
    box-shadow: -15px 0 10px -2px #fff; // When loader overlaps search text, make it look like text is fading out.
  }
}

.query-input-with-button {
  .form-group {
    &:before {
      content: "";
    }
    
    .input-group {
      display: table;
    }
  
    input[type="text"] {
      float: left;
      width: calc(100% ~'+' 24px); // 24px = width of .loader-mini
      padding-left: 12px;
      border-bottom-right-radius: 0;
      border-top-right-radius: 0;
    }
    
    .input-group-addon { // Loader wrapper
      position: relative;
      top: 0;
    }
  }
}

